# agent-sentinel-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: rule-catalog.md  trend-rationale.md
examples/: high-risk-task.txt  low-risk-task.txt
scenarios/: README.md  scenario-001.md  scenario-002.md  scenario-003.md  scenario-004.md  scenario-005.md  scenario-006.md  scenario-007.md  scenario-008.md  scenario-009.md  scenario-010.md  scenario-011.md  scenario-012.md  scenario-013.md  scenario-014.md  scenario-015.md  scenario-016.md  scenario-017.md  scenario-018.md  scenario-019.md  scenario-020.md  scenario-021.md  scenario-022.md  scenario-023.md  scenario-024.md  scenario-025.md  scenario-026.md  scenario-027.md  scenario-028.md  scenario-029.md  scenario-030.md  scenario-031.md  scenario-032.md  scenario-033.md  scenario-034.md  scenario-035.md  scenario-036.md  scenario-037.md  scenario-038.md  scenario-039.md  (+951 more)
src/agent_sentinel_lab/: __init__.py  __main__.py  analyzer.py  cli.py  scenarios.py
tests/: test_analyzer.py  test_cli.py  test_generate_scenarios.py  test_scenarios.py
tools/: commit_series.py  generate_scenarios.py
